---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/initialisation/struct/test_braced_init_of_struct_containing_struct_with_struct_expr.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/struct/test_braced_init_of_struct_containing_struct_with_struct_expr.c"
   (declaration external (memcmp~0 `fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: unsigned long) -> int` (static memcmp)) ∅)
   (struct Inner~1
      (member x @0 `int`)
      (member y @4 `int`)
      (member z @8 `int`))
   (struct Outer~2
      (member x @0 `int`)
      (member inner @4 `struct Inner~1 complete`)
      (member y @16 `int`))
   (function-definition external stack-size=104
      (main~3 `fn() -> int` (static main))
      (compound-statement
         (struct Inner~1
            (member x @0 `int`)
            (member y @4 `int`)
            (member z @8 `int`))
         (definition (inner~4 `struct Inner~1 complete` @0)
            (braced
               (subobject +0 (1 `int` @0))
               (subobject +4 (2 `int` @4))
               (subobject +8 (3 `int` @8))))
         (struct Outer~2
            (member x @0 `int`)
            (member inner @4 `struct Inner~1 complete`)
            (member y @16 `int`))
         (definition (outer~5 `struct Outer~2 complete` @12)
            (braced
               (subobject +0 (42 `int` @12))
               (subobject +4 (inner~4 `struct Inner~1 complete` @0))
               (subobject +16 (27 `int` @28))))
         (definition (expected~6 `array<int; 5>` @32)
            (braced
               (subobject +0 (42 `int` @32))
               (subobject +4 (1 `int` @36))
               (subobject +8 (2 `int` @40))
               (subobject +12 (3 `int` @44))
               (subobject +16 (27 `int` @48))))
         (return
            (call `int` @52
               (addressof `ptr<fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: unsigned long) -> int>` @56
                  (memcmp~0 `fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: unsigned long) -> int` (static memcmp)))
               (noop-type-conversion `ptr<void const>` @64
                  (addressof `ptr<struct Outer~2 complete>` @64
                     (outer~5 `struct Outer~2 complete` @12)))
               (noop-type-conversion `ptr<void const>` @72
                  (noop-type-conversion `ptr<int>` @72
                     (addressof `ptr<array<int; 5>>` @72
                        (expected~6 `array<int; 5>` @32))))
               (20 `unsigned long` @80))))))

----- stderr -----
